# rez-packages

libs/assimp/5.2.5/: package.py
libs/boost/1.80.0/: package.py
libs/catch2/3.3.0/: package.py
libs/de256/1.0.15/: CMakeLists.txt
libs/embree/4.2.0/: CMakeLists.txt  package.py
libs/expat/2.5.0/: package.py
libs/fmt/8.0.1/: CMakeLists.txt  package.py
libs/gbenchmark/1.8.3/: package.py
libs/glfw/3.3.4/: package.py
libs/heif/1.17.6/: CMakeLists.txt  package.py
libs/jpeg/2.1.0/: package.py
libs/llvm/13.0.1/: CMakeLists.txt
libs/llvm/15.0.6/: CMakeLists.txt  package.py
libs/minizip/3.0.7/: package.py
libs/ocio/2.2.0/: package.py
libs/openexr/3.1.5/: package.py
libs/openjpeg/2.4.0/: package.py
libs/openmpt/0.7.3/: CMakeLists.txt
libs/opensubdiv/3.5.0/: package.py
libs/pugixml/1.11.4/: package.py
libs/spirvcross/2021.1.15/: CMakeLists.txt  package.py
libs/tiff/4.3.0/: package.py
libs/usd/23.08/: CMakeLists.txt
softwares/cmake/3.25.1/: build.py
softwares/python/3.10.9/: package.py
